--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
+    "prisma": "^5.1.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
